Feature: LCD init, LTDC 1ayer, DSI Video

--- a/STM32F469I-DISCO/F469I-DISCO_Bring-Up/.vscode/settings.json
+++ b/STM32F469I-DISCO/F469I-DISCO_Bring-Up/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "usart.h": "c"
+        "usart.h": "c",
+        "stm32f4xx_hal.h": "c",
+        "otm8009a.h": "c",
+        "lcd_control.h": "c"
     }
 }
