Feature: add touch sensor (I2C, ft6x06)

--- a/STM32F469I-DISCO/F469I-DISCO_Bring-Up/.vscode/settings.json
+++ b/STM32F469I-DISCO/F469I-DISCO_Bring-Up/.vscode/settings.json
@@ -6,6 +6,7 @@
         "lcd_control.h": "c",
         "dsihost.h": "c",
         "ltdc.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "nt35510.h": "c"
     }
 }
